fix horizontal alignment of buttons in foot nodes (was reverted with grids)

--- a/app/assets/stylesheets/parts/content.scss
+++ b/app/assets/stylesheets/parts/content.scss
@@ -146,7 +146,6 @@ article {
 .not_read {
   a:before {
     content: '+ ';
-    font-size: 1.2em;
     font-weight: bold;
   }
 }
@@ -193,6 +192,7 @@ footer.actions {
       font-weight: bold;
       border-style: none;
       background-color: transparent;
+      height: auto;
     }
   }
 }
